# dummy_project

./: .gitignore  CMakeLists.txt  CompositeRelay.cpp  CompositeRelay.h  DayMode.cpp  DayMode.h  IRelay.cpp  IRelay.h  IVisitor.h  NightMode.cpp  NightMode.h  RGB.cpp  RGB.h  Relay.cpp  Relay.h  Scenario.cpp  Scenario.h  VisitRelay.h  calculator.cc  calculator.h  client.cc  client.h  device.cc  device.h  device_mock.h  idevice.h  iproject.h  main.cc  main.cpp  memos.h  project.cc  run.cc  run.h  single.h  statesaveimpl.cc  statesaveimpl.h  test.cc  visitor_test.cpp
test/: CMakeLists.txt  calculator_test.cc  run_tests.cc
test/mock/: iproject_mock.h
